resources/testcases_static_checks/tests/positive/isGlutGuarded/unrestricted-join-quaternary-ladder.rls
../../../tests_common_data/rule-classification-examples/unrestricted-join-quaternary-ladder.rls