resources/testcases_static_checks/tests/negative/isLinear/c28.rls
../../../tests_common_data/rule-classification-examples/c28.rls